# vim-arcade

./: .gitignore  Cargo.toml  Dockerfile  README.md  TODO.md  fly.toml  go.mod  go.sum  justfile  main.just  td.Dockerfile  ws
cmd/api-server/: main.go
cmd/dial/: main.go
cmd/dummy-client/: main.go
cmd/dummy-server/: main.go
cmd/log-parser/: main.go
cmd/matchmaking/: main.go
cmd/matchmaking/test/: test.go
cmd/origin-server-test/: main.go
cmd/reverse-proxy-test/: main.go
cmd/sim/batch/: main.go
cmd/sim/long-running/: main.go
cmd/td/: main.go
cmd/test/: main.go
cmd/test-matchmaking/: main.go
cmd/ws-api-client/: main.go
cmd/ws-api-server/: main.go
e2e-tests/: assert.go  create_env.go  matchmaking_test.go
e2e-tests/data/: no_server-shm  no_server-wal
e2e-tests/run/: main.go
e2e-tests/sim/: assert.go  connections.go  create_env.go  sim.go  state.go  utils.go
pkg/am-proxy/: am-proxy-config.go  am-proxy-stats.go  am-proxy.go  game.go  matchmaking.go  net.go
pkg/api/: client.go  server.go  utils.go
pkg/assert/: assert.go
pkg/cmd/: cmd.go
pkg/ctrlc/: ctlrc.go  ctrlc.go
pkg/dummy/: client.go  server.go  utils.go
pkg/game-server-stats/: json.go  sqlite.go  stats.go
pkg/io-utils/: utils.go
pkg/matchmaking/: matchmaking.go
pkg/packet/: legacy-packet.go  packet.go  packet_test.go  protocol.md
pkg/pretty-log/: log.go  log_test.go
pkg/quick-math/: AABB.go  AABB_test.go  Vec.go  Vec_test.go
pkg/server-management/: flyio.go  local.go  server.go
pkg/utils/: pretty.go  utils.go  writer.go  writer_test.go
src/: main.rs
(+3 files in other folders)
