[package]
name = "vim-arcade"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.18", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full"] }
